# light-guides

./: .gitignore  CMakeLists.txt  README.md
draw/: CMakeLists.txt  LinkDef.h
draw/src/: plotEfficiency.cpp  utilities.cpp  utilities.h
macros/: batch-emission.mac  batch-slurm-template.mac  batch.mac  default.mac  gps-default.mac  gps-op-emission-CUA-2022-2_1.mac  gps-op-emission-Cube-10-1.mac  gps-op-emission-Cube-4-1.mac  gps-op-emission-Cube-6-1.mac  gps-op-emission-Cube-9-1.mac  gps-op-emission-PWO-CRYTUR.mac  gps-op-emission-PWO-SICCAS.mac  gps-op-emission-SciGlass-4-1-L.mac  gps-op-emission-SciGlass-A.mac  init-vis.mac  vis-init.mac  vis-run-e-.mac  vis-run-emission-0.mac  vis-run.mac  vis.mac
slurm/: batch-slurm.mac
src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  DetectorMessenger.cc  DetectorMessenger.hh  Elements.cc  Elements.hh  EventAction.cc  EventAction.hh  Materials.cc  Materials.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  Utils.cc  Utils.hh  lightguides.cc
src/detectors/: AbsDetector.cc  AbsDetector.hh  AbsMPPC.cc  AbsMPPC.hh  AbsPMT.cc  AbsPMT.hh  DetectorProvider.cc  DetectorProvider.hh  S13360_6025CS.cc  S13360_6025CS.hh  S13360_6025CS_20.cc  S13360_6025CS_20.hh  S13360_6025CS_2x2.cc  S13360_6025CS_2x2.hh  S13360_6025CS_6x6.cc  S13360_6025CS_6x6.hh
